openshift-ressources/risk-management-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: risk-management-server
  name: risk-management-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: risk-management-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: risk-management-server
        deploymentconfig: risk-management-server
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: ACTIVEMQ_HOST
          value: policy-management-backend-queue
        - name: ACTIVEMQ_PORT
          value: "61613"
        image: image-registry.openshift-image-registry.svc:5000/lakeside-mutual/risk-management-server
        imagePullPolicy: Always
        name: risk-management-server
        ports:
        - containerPort: 50051
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
