openshift-ressources/risk-management-server/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: risk-management-server
  name: risk-management-server
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 50051
  selector:
    app: risk-management-server
    deploymentconfig: risk-management-server
  sessionAffinity: None
  type: ClusterIP
